src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Rider__c</fullName>
        <label>Recommended Rider</label>
        <picklist>
            <picklistValues>
                <fullName>Accidental Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver of Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rider__c</fullName>
        <label>Rider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Insured_Amount__c</fullName>
        <formula>Case(Sum_Insured__c,
&quot;$50,000 - $70,000&quot;,60000,
&quot;$70,001 - $100,000&quot;,85000,
&quot;$100,001 - $200,000&quot;,150000,
&quot;$200,001 - $250,000&quot;,225000,
&quot;$250,001 - $399,000&quot;,275000,
60000
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Insured Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Insured__c</fullName>
        <label>Sum Insured</label>
        <picklist>
            <picklistValues>
                <fullName>$50,000 - $70,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$70,001 - $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,001 - $200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$200,001 - $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$250,001 - $399,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Length__c</fullName>
        <label>Term Length</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tobacco_Nicotine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco/Nicotine</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>